<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aaron_tejero.tareaactivities.Confirmar_datos">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo2"
        android:id="@+id/tvtitulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nombre"
        android:id="@+id/tvetiquetanombre"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/tvtitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nada"
        android:id="@+id/tvnombre"
        android:layout_alignTop="@+id/tvetiquetanombre"
        android:layout_toRightOf="@+id/tvetiquetanombre"
        android:layout_alignRight="@+id/tvtitulo"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@+id/tvtitulo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fecha"
        android:id="@+id/tvetiquetafecha"
        android:layout_below="@+id/tvetiquetanombre"
        android:layout_alignLeft="@+id/tvetiquetanombre"
        android:layout_alignStart="@+id/tvetiquetanombre" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nada"
        android:id="@+id/tvfecha"
        android:layout_alignTop="@+id/tvetiquetafecha"
        android:layout_toRightOf="@+id/tvetiquetafecha"
        android:layout_alignRight="@+id/tvtitulo"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@+id/tvtitulo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/telefono"
        android:id="@+id/tvetiquetatelefono"
        android:layout_below="@+id/tvetiquetafecha"
        android:layout_alignLeft="@+id/tvetiquetafecha"
        android:layout_alignStart="@+id/tvetiquetafecha" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nada"
        android:id="@+id/tvtelefono"
        android:layout_alignTop="@+id/tvetiquetatelefono"
        android:layout_toRightOf="@+id/tvetiquetatelefono"
        android:layout_alignRight="@+id/tvtitulo"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@+id/tvtitulo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Email"
        android:id="@+id/tvetiquetacorreo"
        android:layout_below="@+id/tvetiquetatelefono"
        android:layout_alignLeft="@+id/tvetiquetafecha"
        android:layout_alignStart="@+id/tvetiquetafecha" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nada"
        android:id="@+id/tvcorreo"
        android:layout_alignTop="@+id/tvetiquetacorreo"
        android:layout_toRightOf="@+id/tvetiquetacorreo"
        android:layout_alignRight="@+id/tvtitulo"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@+id/tvtitulo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/descripcion"
        android:id="@+id/tvetiquetadescripcion"
        android:layout_below="@+id/tvetiquetacorreo"
        android:layout_alignLeft="@+id/tvetiquetacorreo"
        android:layout_alignStart="@+id/tvetiquetacorreo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nada"
        android:id="@+id/tvdescripcion"
        android:layout_alignTop="@+id/tvetiquetadescripcion"
        android:layout_toRightOf="@+id/tvetiquetadescripcion"
        android:layout_alignRight="@+id/tvtitulo"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@+id/tvtitulo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btneditar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        android:text="@string/editar"
        android:theme="@style/boton"
        android:layout_weight="0.5"

        />


</RelativeLayout>
