<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="aaron_tejero.tareaactivities.MainActivity">





        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"


            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cajanombre"
                android:id="@+id/camponombre"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>


    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:endYear="2020"
        android:startYear="1900"
        android:id="@+id/dtpfecha"
        android:calendarViewShown="false"
        android:spinnersShown="true"
        android:spinnerMode="dropdown"
        android:datePickerMode="spinner"
        android:drawSelectorOnTop="true"
        android:hint="Fecha Nacimiento"

        >

    </DatePicker>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clickable="false">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cajatelefono"
            android:id="@+id/campotelefono"
            android:inputType="phone"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cajaemail"
            android:id="@+id/campoemail"
            android:inputType="textEmailAddress"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cajadescripcion"
            android:id="@+id/campodescripcion"
            android:inputType="text"

            />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoboton"
        android:id="@+id/btnsiguiente"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />



</LinearLayout>
